--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -5,6 +5,9 @@ WORKDIR /
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN apt-get update
+RUN apt-get -y install nginx
+
 COPY startup.sh /
 RUN chmod +x /startup.sh
 
