--- a/conf/uwsgi.conf
+++ b/conf/uwsgi.conf
@@ -1,8 +1,14 @@
 server {
     listen 80;
-    location / {
+    location /api {
         add_header Access-Control-Allow-Origin *;
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
+    }
+
+    location /lineapi {
+        add_header Access-Control-Allow-Origin *;
+        include uwsgi_params;
+        uwsgi_pass unix:///tmp/uwsgi_line.sock;
     }
 }
