環境変数修正

--- a/backend.env
+++ b/backend.env
@@ -13,3 +13,7 @@ DB_PASSWORD=postgres
 DB_HOST=postgres_con
 DB_PORT=5432
 DB_NAME=ai_oshi_db
+
+# LINEBot接続情報 (ローカル動作確認時に書き換えください。書き換えた状態でcommitをしないでください。)
+LINE_CHANNEL_SECRET=XXXXXX
+LINE_CHANNEL_ACCESS_TOKEN=XXXXXX
