会話の履歴情報保持対応

--- a/backend.env
+++ b/backend.env
@@ -17,3 +17,13 @@ DB_NAME=ai_oshi_db
 # LINEBot接続情報 (ローカル動作確認時に書き換えください。書き換えた状態でcommitをしないでください。)
 LINE_CHANNEL_SECRET=XXXXXX
 LINE_CHANNEL_ACCESS_TOKEN=XXXXXX
+
+# プロンプト判定文字列
+# PROMPT_JUDGE_STRING="# 推しの呼び名"
+PROMPT_JUDGE_STRING="ロールプレイを行います。"
+
+# 会話の履歴情報の上限について
+## AIに送信する履歴件数の上限
+MEMORY_INVOKE_LIMIT=3
+## DBに保存する履歴件数の上限
+MEMORY_DB_LIMIT=20
