LIFF用推し設定API作成

--- a/backend.env
+++ b/backend.env
@@ -17,6 +17,9 @@ DB_NAME=ai_oshi_db
 # LINEBot接続情報 (ローカル動作確認時に書き換えください。書き換えた状態でcommitをしないでください。)
 LINE_CHANNEL_SECRET=XXXXXX
 LINE_CHANNEL_ACCESS_TOKEN=XXXXXX
+LINE_CHANNEL_ID=XXXXXX
+LINE_URL_AUTH=https://api.line.me/oauth2/v2.1/verify
+LINE_URL_PROFILE=https://api.line.me/v2/profile
 
 # プロンプト判定文字列
 # PROMPT_JUDGE_STRING="# 推しの呼び名"
