--- a/conf/uwsgi.conf
+++ b/conf/uwsgi.conf
@@ -11,4 +11,10 @@ server {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi_line.sock;
     }
+
+    location /liffapi {
+        add_header Access-Control-Allow-Origin *;
+        include uwsgi_params;
+        uwsgi_pass unix:///tmp/uwsgi_liff.sock;
+    }
 }
