スリープ追加&ユーザ名取得処理追加&登録時にユーザ追加

--- a/backend.env
+++ b/backend.env
@@ -32,3 +32,8 @@ PROMPT_JUDGE_STRING="ロールプレイを行います。"
 MEMORY_INVOKE_LIMIT=3
 ## DBに保存する履歴件数の上限
 MEMORY_DB_LIMIT=20
+
+# 
+
+# リプライ時のスリープ時間[秒]
+SLEEP_SECOND=5
